--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="top-menu">
+<div highlighted class="top-menu">
 
     <img class="logo"
          src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
@@ -29,13 +29,22 @@ and directives is the folder, and highlighted is the name of the directive-->
     
     <!-- here we can add an input property but it won't be applied 
     to the course-card element but to the highlighted directive-->
-    <course-card [highlighted]="true"
+    <!-- The $event on onToggle contains the value emitted by the
+    highlight directive. -->
+    <!-- The #highlighter is a template reference that refers to the
+    template of the highlighted directive. hl is the name we have
+    used to export this directive -->
+    <course-card highlighted #highlighter="hl"
+    (toggleHighlight)="onToggle($event)"
     (courseSelected)="onCourseSelected($event)"
          [course]="course">
 
         <course-image [src]="course.iconUrl"></course-image>
 
-    <div class="course-description">
+    <!-- Here in this div we are on dblclick accessing the
+    highlight directive and its toggle method -->
+    <div class="course-description"
+    (dblclick)="highlighter.toggle()">
         {{ course.longDescription }}
     </div>
 
@@ -43,4 +52,49 @@ and directives is the folder, and highlighted is the name of the directive-->
 
 </div>
 
+<!-- NOTES ON STRUCTURAL DIRECTIVES-->
+<!-- When we have a structural directive like ngIf it looks like this: -->
+    <!-- <div class="courses" *ngIf="courses[0]" as course>
+        <course-card [course]="course">
+            
+            <course-image [src]="course.iconUrl"></course-image>
 
+            <div class="course-description"
+                (dblclick)="highlighter.toggle()">
+                {{ course.longDescription }}
+            </div>
+        </course-card>
+    </div> -->
+<!-- What we need to know is that structural directive ngIf, is behind
+the scenes being applied as an attribute directive to a containing
+template tag. Like this: -->
+<!-- <ng-template [ngIf]="courses[0]" let-course>
+    <div class="courses">
+        <course-card [course]="course">
+            
+            <course-image [src]="course.iconUrl"></course-image>
+
+            <div class="course-description"
+                (dblclick)="highlighter.toggle()">
+                {{ course.longDescription }}
+            </div>
+        </course-card>
+    </div>
+</ng-template> -->
+
+<!-- STRUCTURAL DIRECTIVE NGX-UNLESS IMPLEMENTATION -->
+<ng-template [ngIf]="courses[0]" let-course>
+    <div class="courses">
+        <course-card [course]="course">
+            
+            <course-image [src]="course.iconUrl"
+            *ngxUnless="!course.iconUrl">
+            </course-image>
+            
+            <div class="course-description"
+                (dblclick)="highlighter.toggle()">
+                {{ course.longDescription }}
+            </div>
+        </course-card>
+    </div>
+</ng-template>
