--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,96 +5,114 @@
 
 </div>
 
+<!-- The salmon-theme is not affecting the div immediately following 
+because we use the :host-context() modifier in the css file. -->
+<div class="salmon-theme">
+    <!-- If we move the course-card style from styles.css and we place it into 
+    course-card.component.css, then the style will not work. Why? 
+    This is because of View Encapsulation. Styles are specfic to the 
+    components. More precisely all styles in course-card.component.css will 
+    be applied to all elements in course-card.component.html. How? 
+    Angular will create an attribute and apply it to all the elements defined 
+    within the html file. The attribute names are: "ngcontent-c0" 
+    "ng-content-c1" "ng-content-c2" and so on. c0 refers to component 0, 
+    c1 refers to component 1, c2, component 2 and so on. -->
+    <div class="course-card">
+        Test Card
+    </div>
 
-<!-- ATTRIBUTE DIRECTIVES-->
-<!--To create a directive in the terminal we do
-ng g directive directives/highlighted
-where g is for generate, directive tells angular what to scaffold 
-and directives is the folder, and highlighted is the name of the directive-->
-<div class="courses" *ngIf="courses[0] as course">
 
-    <!-- here course-card is said to be the host element of the
-    highlighted directive-->
-    <!-- <course-card highlighted
-            (courseSelected)="onCourseSelected($event)"
-                 [course]="course">
+    <!-- ATTRIBUTE DIRECTIVES-->
+    <!--To create a directive in the terminal we do
+    ng g directive directives/highlighted
+    where g is for generate, directive tells angular what to scaffold 
+    and directives is the folder, and highlighted is the name of the directive-->
+    <div class="courses" *ngIf="courses[0] as course">
 
-        <course-image [src]="course.iconUrl"></course-image>
+        <!-- here course-card is said to be the host element of the
+        highlighted directive-->
+        <!-- <course-card highlighted
+                (courseSelected)="onCourseSelected($event)"
+                    [course]="course">
 
-        <div class="course-description">
+            <course-image [src]="course.iconUrl"></course-image>
+
+            <div class="course-description">
+                {{ course.longDescription }}
+            </div>
+
+        </course-card> -->
+        
+        <!-- here we can add an input property but it won't be applied 
+        to the course-card element but to the highlighted directive-->
+        <!-- The $event on onToggle contains the value emitted by the
+        highlight directive. -->
+        <!-- The #highlighter is a template reference that refers to the
+        template of the highlighted directive. hl is the name we have
+        used to export this directive -->
+        <course-card highlighted #highlighter="hl"
+        (toggleHighlight)="onToggle($event)"
+        (courseSelected)="onCourseSelected($event)"
+            [course]="course">
+
+            <course-image [src]="course.iconUrl"></course-image>
+
+        <!-- Here in this div we are on dblclick accessing the
+        highlight directive and its toggle method -->
+        <div class="course-description"
+        (dblclick)="highlighter.toggle()">
             {{ course.longDescription }}
         </div>
 
-    </course-card> -->
-    
-    <!-- here we can add an input property but it won't be applied 
-    to the course-card element but to the highlighted directive-->
-    <!-- The $event on onToggle contains the value emitted by the
-    highlight directive. -->
-    <!-- The #highlighter is a template reference that refers to the
-    template of the highlighted directive. hl is the name we have
-    used to export this directive -->
-    <course-card highlighted #highlighter="hl"
-    (toggleHighlight)="onToggle($event)"
-    (courseSelected)="onCourseSelected($event)"
-         [course]="course">
+    </course-card>
 
-        <course-image [src]="course.iconUrl"></course-image>
-
-    <!-- Here in this div we are on dblclick accessing the
-    highlight directive and its toggle method -->
-    <div class="course-description"
-    (dblclick)="highlighter.toggle()">
-        {{ course.longDescription }}
     </div>
 
-</course-card>
+    <!-- NOTES ON STRUCTURAL DIRECTIVES-->
+    <!-- When we have a structural directive like ngIf it looks like this: -->
+        <!-- <div class="courses" *ngIf="courses[0]" as course>
+            <course-card [course]="course">
+                
+                <course-image [src]="course.iconUrl"></course-image>
+
+                <div class="course-description"
+                    (dblclick)="highlighter.toggle()">
+                    {{ course.longDescription }}
+                </div>
+            </course-card>
+        </div> -->
+    <!-- What we need to know is that structural directive ngIf, is behind
+    the scenes being applied as an attribute directive to a containing
+    template tag. Like this: -->
+    <!-- <ng-template [ngIf]="courses[0]" let-course>
+        <div class="courses">
+            <course-card [course]="course">
+                
+                <course-image [src]="course.iconUrl"></course-image>
+
+                <div class="course-description"
+                    (dblclick)="highlighter.toggle()">
+                    {{ course.longDescription }}
+                </div>
+            </course-card>
+        </div>
+    </ng-template> -->
+
+    <!-- STRUCTURAL DIRECTIVE NGX-UNLESS IMPLEMENTATION -->
+    <ng-template [ngIf]="courses[0]" let-course>
+        <div class="courses">
+            <course-card [course]="course">
+                
+                <course-image [src]="course.iconUrl"
+                *ngxUnless="!course.iconUrl">
+                </course-image>
+                
+                <div class="course-description"
+                    (dblclick)="highlighter.toggle()">
+                    {{ course.longDescription }}
+                </div>
+            </course-card>
+        </div>
+    </ng-template>
 
 </div>
-
-<!-- NOTES ON STRUCTURAL DIRECTIVES-->
-<!-- When we have a structural directive like ngIf it looks like this: -->
-    <!-- <div class="courses" *ngIf="courses[0]" as course>
-        <course-card [course]="course">
-            
-            <course-image [src]="course.iconUrl"></course-image>
-
-            <div class="course-description"
-                (dblclick)="highlighter.toggle()">
-                {{ course.longDescription }}
-            </div>
-        </course-card>
-    </div> -->
-<!-- What we need to know is that structural directive ngIf, is behind
-the scenes being applied as an attribute directive to a containing
-template tag. Like this: -->
-<!-- <ng-template [ngIf]="courses[0]" let-course>
-    <div class="courses">
-        <course-card [course]="course">
-            
-            <course-image [src]="course.iconUrl"></course-image>
-
-            <div class="course-description"
-                (dblclick)="highlighter.toggle()">
-                {{ course.longDescription }}
-            </div>
-        </course-card>
-    </div>
-</ng-template> -->
-
-<!-- STRUCTURAL DIRECTIVE NGX-UNLESS IMPLEMENTATION -->
-<ng-template [ngIf]="courses[0]" let-course>
-    <div class="courses">
-        <course-card [course]="course">
-            
-            <course-image [src]="course.iconUrl"
-            *ngxUnless="!course.iconUrl">
-            </course-image>
-            
-            <div class="course-description"
-                (dblclick)="highlighter.toggle()">
-                {{ course.longDescription }}
-            </div>
-        </course-card>
-    </div>
-</ng-template>
