--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -3,25 +3,25 @@ course-card {
     display: block;
 }
 
-.course-card {
+/* .course-card {
     margin-bottom: 40px;
     text-align: center;
     border-radius: 4px;
     padding: 20px 0;
     box-shadow: 0 1px 16px 0 rgba(0, 0, 0, .2), 0 2px 8px 0 rgba(0, 0, 0, .14), 0 4px 8px -1px rgba(0, 0, 0, .12);
-}
+} */
 
 .course-card .course-title {
     font-size: 27px;
     font-weight: bold;
 }
 
-.course-card .course-description {
+/* .course-card .course-description {
     max-width: 360px;
     margin: 0 auto;
     margin-top: 15px;
   user-select: none;
-}
+} */
 
 .course-card img {
     border-radius: 4px;
@@ -37,7 +37,7 @@ button {
     border-radius: 4px;
 }
 
-course-card.is-first {
+/* course-card.is-first {
     border-top: 2px solid grey;
     padding-top: 20px;
 }
@@ -54,7 +54,7 @@ course-card.is-even {
 
 course-card.is-odd {
     background: lightcyan;
-}
+} */
 
 
 
